Fix horizontal spaces, via the variable -spacing-unit.

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -89,7 +89,7 @@ $space-2: 1rem !default;
 $space-3: 2rem !default;
 $space-4: 4rem !default;
 
-$horizontal-spacing-unit:       00px; //50px; // Horizontal width of the page: 800 - 2($horizontal-spacing-unit) : see ".wrapper" in _sass/_base.scss 
+$horizontal-spacing-unit:       10px; //50px; // Horizontal width of the page: 800 - 2($horizontal-spacing-unit) : see ".wrapper" in _sass/_base.scss 
 $vertical-spacing-unit:         40px;
 $nav-height:                    56px;
 
